--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 <body>
     <header>
-        <h1>Etch A Sketch</h1>
-        <h2>To play the game, hover your cursor over the squares on the grid to make an image</h2>
+        <h1 class="heading">Etch A Sketch</h1>
+        <h2 class="heading">To play the game, hover your cursor over the squares on the grid to make an image</h2>
     </header>
     <section class="gridContainer">
         <div class="grid"></div>
     </section>
-    <section class="gridOptions">
-        <p>Change grid size</p>
-        <div>
+    <section class="sectionContainer">
+        <p class="sectionTitle">Change grid size</p>
+        <div class="gridButtons">
             <button>10 x 10</button>
             <button>16 x 16</button>
             <button>48 x 48</button>
@@ -29,8 +29,8 @@
             <button>Reset</button>
         </div>
     </section>
-    <section>
-        <p>Change Colour</p>
+    <section class="sectionContainer">
+        <p class="sectionTitle">Change Colour</p>
         <div>
             <button>Monochrome</button>
             <button>Rouge</button>
