--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
     <title>Etch A Sketch</title>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
@@ -25,7 +26,7 @@
             <button>48 x 48</button>
             <button>Custom Grid</button>
         </div>
-        <div>
+        <div class="reset">
             <button>Reset</button>
         </div>
     </section>
