Update files to be able to mouseover grid cells and colour in each cell

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <section class="sectionContainer">
         <p class="sectionTitle">Change grid size</p>
         <div class="gridButtons">
-            <button>10 x 10</button>
-            <button>16 x 16</button>
-            <button>48 x 48</button>
-            <button>Custom Grid</button>
+            <button name="10">10 x 10</button>
+            <button name="16">16 x 16</button>
+            <button name="48">48 x 48</button>
+            <button name="custom">Custom Grid</button>
         </div>
         <div class="reset">
             <button>Reset</button>
