Update Files to Enable the Functionality of the Reset Button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button name="custom">Custom Grid</button>
         </div>
         <div class="reset">
-            <button>Reset</button>
+            <button name="reset">Reset</button>
         </div>
     </section>
     <section class="sectionContainer">
