Update Files to Enable Change of mouseOver Colour Depending on Button Clicked

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </section>
     <section class="sectionContainer">
         <p class="sectionTitle">Change Colour</p>
-        <div>
-            <button>Monochrome</button>
-            <button>Rouge</button>
+        <div class="mouseOverColour">
+            <button name="monochrome">Monochrome</button>
+            <button name="rouge">Rouge</button>
         </div>
     </section>
 </body>
